fixed company service impl unit tests